--- a/WebApp/Views/DoctorConsultation/Index.cshtml
+++ b/WebApp/Views/DoctorConsultation/Index.cshtml
@@ -34,10 +34,7 @@
 
 
 <link href="~/Content/css/green.css" rel="stylesheet" />
-<script type="text/javascript" src="~/Scripts/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="~/Scripts/dataTables.bootstrap.min.js"></script>
-<script type="text/javascript" src="~/Scripts/dataTables.buttons.min.js"></script>
-<script type="text/javascript" src="~/Scripts/dataTables.responsive.min.js"></script>
+
 
 <!-- page content -->
 <div class="right_col" role="main">
@@ -45,7 +42,7 @@
 
     <div class="x_panel" style="margin-bottom: 190px;">
         <div class="x_title">
-            <h2>Call History</h2>
+            <h2>Consultation History</h2>
             <ul class="nav navbar-right panel_toolbox">
                 <li>
                     <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
