--- a/WebApp/Views/MyHealth/PartialFamilyHX.cshtml
+++ b/WebApp/Views/MyHealth/PartialFamilyHX.cshtml
@@ -49,7 +49,7 @@
                         <div class="col-lg-8 col-md-6 col-sm-6 col-xs-6">
                             <div class="checkbox" >
                                 <label id="mycheckbox">
-                                    <input id="@("div"+j)" type="checkbox" class="flat"  name="@item.name@item.fhxID">&nbsp &nbsp @item.name
+                                    <input id="@("div"+j)" type="checkbox" class="flat"  name="@item.name@item.fhxID">&nbsp;&nbsp; @item.name
                                     <script>
                                         if(@item.patientID!=0)
                                         {
