--- a/WebApp/Views/Consultation/PartialViewConsultation.cshtml
+++ b/WebApp/Views/Consultation/PartialViewConsultation.cshtml
@@ -12,11 +12,11 @@
     <table id="datatableconsultation" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr class="headings">
-                <th class="column-title">Doctor's Name </th>
-                <th class="column-title">Date & Time </th>
-                <th class="column-title">Rating</th>
-                <th class="column-title">ROV </th>
-                <th class="column-title">Action</th>
+                <th class="column-title" style="text-align:center">Doctor's Name </th>
+                <th class="column-title" style="text-align:center">Date & Time </th>
+                <th class="column-title" style="text-align:center">Rating</th>
+                <th class="column-title" style="text-align:center">ROV </th>
+                <th class="column-title" style="text-align:center">Action</th>
             </tr>
         </thead>
 
@@ -27,9 +27,9 @@
                 foreach (var item in Model)
                 {
                     <tr class="even pointer">
-                        <td>@item.DoctorName</td>
-                        <td>@item.appDate @item.appTime</td>
-                        <td>
+                        <td style="text-align:center">@item.DoctorName</td>
+                        <td style="text-align:center">@item.appDate @item.appTime</td>
+                        <td style="text-align:center">
                             @if (item.reviewStar == 0)
                             {
 
@@ -73,9 +73,9 @@
 
                             }
                             </td>
-                        <td>@item.rov</td>
+                        <td style="text-align:center">@item.rov</td>
 
-                        <td>
+                        <td style="text-align:center">
                             <button data-toggle="modal" data-id="@item.consultID" id="@item.consultID" data-target="#myModal4"
                                     class="btn btn-primary btn-sm m-b-0 " type="button" onclick=showConsult(@item.consultID);>
                                 View
@@ -135,8 +135,13 @@
           };
         }();
 
-        $('#datatableconsultation').dataTable();
-
+       
+        $('#datatableconsultation').dataTable({
+            'order': [[1, 'desc']],
+            columnDefs: [
+              { type: 'date-dd-mmm-yyyy', targets: 1 }
+            ]
+        });
         $('#datatable-keytable').DataTable({
           keys: true
         });
