--- a/WebApp/Views/DoctorAppointment/PartialDoctorReschedule.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorReschedule.cshtml
@@ -31,11 +31,11 @@ else
     <table id="rescheduledatatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr class="headings">
-                <th class="column-title">Patient Name </th>
-                <th class="column-title">Appointment Time</th>
-                <th class="column-title">Reason of Visit </th>
-                <th class="column-title">ChiefComplaint</th>
-                <th class="column-title">Action</th>
+                <th class="column-title" style="text-align:center">Patient Name </th>
+                <th class="column-title" style="text-align:center">Appointment Time</th>
+                <th class="column-title" style="text-align:center">Reason of Visit </th>
+                <th class="column-title" style="text-align:center">Chief Complaint</th>
+                <th class="column-title" style="text-align:center">Action</th>
             </tr>
         </thead>
 
@@ -43,12 +43,12 @@ else
             @foreach (var item in Model)
             {
                 <tr class="even pointer">
-                    <td>@item.PatientName</td>
-                    <td>@item.appDate @item.appTime</td>
-                    <td>@item.rov</td>
-                    <td>@item.chiefComplaints</td>
+                    <td style="text-align:center;width:20%">@item.PatientName</td>
+                    <td style="text-align:center;width:15%">@item.appDate @item.appTime</td>
+                    <td style="text-align:center;width:20%">@item.rov</td>
+                    <td style="text-align:center;width:20%">@item.chiefComplaints</td>
                     <!-- <td><button class="btn btn-primary btn-sm m-b-0 " type="submit">View</button></td> -->
-                    <td>
+                    <td style="text-align:center;width:10%">
                         <div class="btn-group" role="group">
                             <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Action
@@ -72,48 +72,13 @@ else
 <!-- Datatables -->
 <script>
       $(document).ready(function() {
-        var handleDataTableButtons = function() {
-          if ($("#datatable-buttons").length) {
-            $("#datatable-buttons").DataTable({
-              dom: "Bfrtip",
-              buttons: [
-                {
-                  extend: "copy",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "csv",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "excel",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "pdfHtml5",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "print",
-                  className: "btn-sm"
-                },
-              ],
-              responsive: true
-            });
-          }
-        };
-
-        TableManageButtons = function() {
-          "use strict";
-          return {
-            init: function() {
-              handleDataTableButtons();
-            }
-          };
-        }();
-
-        $('#rescheduledatatable').dataTable();
-
+      
+       $('#rescheduledatatable').dataTable({
+           'order': [[1, 'desc']],
+           columnDefs: [
+             { type: 'date-dd-mmm-yyyy', targets: 1 }
+           ]
+       });
         $('#datatable-keytable').DataTable({
           keys: true
         });
@@ -134,19 +99,14 @@ else
 
         var $datatable = $('#datatable-checkbox');
 
-        $datatable.dataTable({
-          'order': [[ 1, 'asc' ]],
-          'columnDefs': [
-            { orderable: false, targets: [0] }
-          ]
-        });
+       
         $datatable.on('draw.dt', function() {
           $('input').iCheck({
             checkboxClass: 'icheckbox_flat-green'
           });
         });
 
-        TableManageButtons.init();
+       // TableManageButtons.init();
       });
 </script>
 <!-- /Datatables -->
