--- a/WebApp/Views/DoctorAppointment/PartialDoctorUpcoming.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorUpcoming.cshtml
@@ -18,11 +18,11 @@ else
     <table id="datatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr class="headings">
-                <th class="column-title">Patient Name </th>
-                <th class="column-title">Appointment Time</th>
-                <th class="column-title">Reason of Visit </th>
-                <th class="column-title">ChiefComplaint</th>
-                <th class="column-title">Action</th>
+                <th class="column-title" style="text-align:center">Patient Name </th>
+                <th class="column-title" style="text-align:center">Appointment Time</th>
+                <th class="column-title" style="text-align:center">Reason of Visit </th>
+                <th class="column-title" style="text-align:center">Chief Complaint</th>
+                <th class="column-title" style="text-align:center">Action</th>
             </tr>
         </thead>
 
@@ -34,17 +34,27 @@ else
                 {
 
                     <tr class="even pointer">
-                        <td>@item.PatientName</td>
-                        <td>@item.appDate @item.appTime</td>
-                        <td>@item.rov</td>
-                        <td>@item.chiefComplaints</td>
+                        <td style="text-align:center;width:20%">@item.PatientName</td>
+                        <td style="text-align:center;width:15%">@item.appDate @item.appTime</td>
+                        <td style="text-align:center;width:20%">@item.rov</td>
+                        <td style="text-align:center;width:20%">@item.chiefComplaints</td>
                         <!-- <td><button class="btn btn-primary btn-sm m-b-0 " type="submit">View</button></td> -->
-                        <td>
+                        <td style="text-align:center;width:10%">
                             <div class="btn-group" role="group">
                                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Action
                                     <span class="caret"></span>
+                                    
                                 </button>
+                                <a id="@("div"+j)" class="clsMakeCall" title="Call" onclick="alert('Calling...');" data-doctorid="@item.patientID" 
+                                   style="display:none;" href="javascript:">
+                                    <i class="fa fa-phone" aria-hidden="true" style="margin-right: -23px;margin-top: 9px;width: 20px;"></i>
+                                  
+                                </a>
+                                
+                                <script>
+                                    setInterval(function () { enableCalling('@item.appDate','@item.appTime','@j'); }, 60000);
+                                </script>
                                 <ul class="dropdown-menu dropdown-menu-right">
                                     <li><a href="#" data-toggle="modal" class="thumbnail-col-inner" data-id="@item.appID" id="@item.doctorID" data-target="#myModal5" onclick=$("#pvappid").val(@item.appID);>View Detail</a></li>
                                   
@@ -63,49 +73,98 @@ else
 }
 <!-- Datatables -->
 <script>
-      $(document).ready(function() {
-        var handleDataTableButtons = function() {
-          if ($("#datatable-buttons").length) {
-            $("#datatable-buttons").DataTable({
-              dom: "Bfrtip",
-              buttons: [
-                {
-                  extend: "copy",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "csv",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "excel",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "pdfHtml5",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "print",
-                  className: "btn-sm"
-                },
-              ],
-              responsive: true
-            });
-          }
+    var flag = 0;
+    var _objCT = {};
+    function enableCalling(appDate, appTime, j) {
+        //alert(j);
+        var dateString = appDate; // Oct 23
+        var dateParts = dateString.split("/");
+        var dateObject = new Date(dateParts[2], dateParts[1] - 1, dateParts[0]); // month is 0-based
+        //var today = new Date();
+        var dd = dateObject.getDate();
+        var mm = dateObject.getMonth() + 1; //January is 0!
+        var yyyy = dateObject.getFullYear();
+
+        if (dd < 10) {
+            dd = '0' + dd
+        }
+
+        if (mm < 10) {
+            mm = '0' + mm
+        }
+
+        dateObject = mm + '/' + dd + '/' + yyyy;
+
+        var appdatetime = dateObject + ' ' + appTime;
+        var appdatetime = appdatetime.split('')
+        appdatetime.splice(appdatetime.length - 2, 0, " ");
+        var result = appdatetime.join('');
+
+        var cc = new Date(result);
+        var c = new Date();
+        function timeDifference(d, dd) {
+            var minute = 60 * 1000,
+                hour = minute * 60,
+                day = hour * 24,
+                month = day * 30,
+                ms = Math.abs(dd - d);
+
+            var months = parseInt(ms / month, 10);
+
+            ms -= months * month;
+
+            var days = parseInt(ms / day, 10);
+
+            ms -= days * day;
+
+            var hours = parseInt(ms / hour, 10);
+
+            ms -= hours * hour;
+            var minutes = parseInt(ms / minute, 10);
+            _objCT["months"] = months;
+            _objCT["days"] = days;
+            _objCT["hours"] = hours;
+            _objCT["minutes"] = minutes;
+            //return [
+            //    months + " months",
+            //    days + " days",
+            //    hours + " hours",
+            //    minutes + " minutes"
+            //].join(", ");
+            return _objCT;
         };
-
-        TableManageButtons = function() {
-          "use strict";
-          return {
-            init: function() {
-              handleDataTableButtons();
+        var remTime = timeDifference(cc, c);
+        //alert(remTime["days"] + ' ' + remTime["hours"] + ' ' + _objCT["minutes"]);
+        if (remTime["hours"] == 0 && remTime["days"] == 0)
+        {
+            if (remTime["minutes"] <= 5 && remTime["minutes"] <= 15) {
+                //alert(remTime["days"] + ' ' + remTime["hours"] + ' ' + _objCT["minutes"]);
+                $('#div' + j).css("display", "block");
             }
-          };
-        }();
+            else {
+                $('#div' + j).css("display", "none");
+            }
+            if(remTime["minutes"] > 15)
+            {
+               reloadUpcomingandPendingApp(function () {
 
-        $('#datatable').dataTable();
+                });
+            }
+            
+        }
+        
 
+
+    }
+      $(document).ready(function() {
+        
+       
+        $('#datatable').dataTable({
+            'order': [[1, 'desc']],
+            columnDefs: [
+              { type: 'date-dd-mmm-yyyy', targets: 1 }
+            ]
+        });
         $('#datatable-keytable').DataTable({
           keys: true
         });
@@ -126,19 +185,14 @@ else
 
         var $datatable = $('#datatable-checkbox');
 
-        $datatable.dataTable({
-          'order': [[ 1, 'asc' ]],
-          'columnDefs': [
-            { orderable: false, targets: [0] }
-          ]
-        });
+       
         $datatable.on('draw.dt', function() {
           $('input').iCheck({
             checkboxClass: 'icheckbox_flat-green'
           });
         });
 
-        TableManageButtons.init();
+        //TableManageButtons.init();
       });
 </script>
 <!-- /Datatables -->
