--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -32,6 +32,8 @@
     <script src="@Url.Content("~/Scripts/daterangepiker/daterangepicker.js")"></script>
 
     <script src="@Url.Content("~/Scripts/blockUI.js")"></script>
+    <script src="@Url.Content("~/Scripts/general.js")"></script>
+
     <script src="@Url.Content("~/Scripts/jquery.cookie.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery.signalR-2.2.1.min.js")"></script>
 
