--- a/WebApp/Views/SeeDoctor/MyCareTeamView.cshtml
+++ b/WebApp/Views/SeeDoctor/MyCareTeamView.cshtml
@@ -48,10 +48,8 @@ else
                 <a href="javascript(void);"><i class="fa fa-star"></i></a>
                <a href="javascript(void);"><i class="fa fa-star"></i></a>
                 <a href="javascript(void);"><i class="fa fa-star"></i></a>
-               <i class="fa fa-phone clsNotMakePhone" aria-hidden="true"></i><a class="clsMakeCall" title="Call doctor @item.firstName @item.lastName" onclick=makeCallToDoctor(this) data-doctorid="@item.doctorID" style="display:none;" href="javascript(void);">
-
+               <i class="fa fa-phone clsNotMakePhone" aria-hidden="true"></i><a class="clsMakeCall" title="Call doctor @item.firstName @item.lastName" onclick=makeCallToDoctor(this) data-doctorid="@item.doctorID" style="display:none;" href="javascript:">
                     <i class="fa fa-phone" aria-hidden="true"></i>
-
                 </a>
 
             </p>
