--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -363,10 +363,8 @@
     <script src="~/signalr/hubs"></script>
     <script type="text/javascript">
 
-        $('#menu_toggle').click(function ()
-        {
-            if (document.body.className == "nav-md")
-            {
+        $('#menu_toggle').click(function () {
+            if (document.body.className == "nav-md") {
                 ($("body").attr("class", "nav-sm"))
             }
             else $("body").attr("class", "nav-md");
@@ -423,13 +421,22 @@
         }
 
         function makeCallToDoctor(e) {
+
+            var docId = $(e).attr("data-doctorid");
+
+            var oDocInfo = null;
+            for (var i = 0; i < availableDoctors.doctor.length; i++) {
+                if (availableDoctors.doctor[i].docId == docId) {
+                    oDocInfo = availableDoctors.doctor[i];
+                    break;
+                }
+            }
+
             setDoctorID($(e).attr("data-doctorid"));
             var curElem = $(e);
-            var PatientName = "Patient";
-            //alert("calling");
 
             //Log Call Info - Starts
-            var cCallLogUrl = '@Url.Action("PatientCallDoctor", "UserChat")?doctorId=' + $(e).attr("data-doctorid"); 
+            var cCallLogUrl = '@Url.Action("PatientCallDoctor", "UserChat")?doctorId=' + $(e).attr("data-doctorid");
             $.post(cCallLogUrl);
             //Log Call Info- Ends
 
@@ -437,10 +444,12 @@
             {
                 SenderId: '@SessionHandler.UserInfo.Id',
                 UserName: '@SessionHandler.UserInfo.Email',
-                ReceiverConnectionId: curElem.data("connId"),
-                ReceiverId: '20',
+                ReceiverConnectionId: oDocInfo.connectionId,
+                ReceiverId: docId,
+                DoctorName: oDocInfo.firstName + ' ' + oDocInfo.lastName,
+                PatientName: '@(SessionHandler.UserInfo.FirstName + " " + SessionHandler.UserInfo.LastName)',
                 SenderType: 'Patient',
-                Message: JSON.stringify({ status: 'call', name: PatientName }),
+                Message: JSON.stringify({ status: 'call', name: '@(SessionHandler.UserInfo.FirstName + " " + SessionHandler.UserInfo.LastName)' }),
                 UserGroup: 'doctors'
             });
         }
@@ -491,27 +500,71 @@
                 }
             };
 
+            chat.client.incomingCallFromDoctor = function (msgFrom, msg, senderConnId, senderid, appId, docName) {
+                var msgJson = JSON.parse(msg);
+
+                var isPatientAcceptedCall = confirm('Doctor ' + msgJson.name + ' want to have consultation with you. Press OK to proceed.');
+
+                if (isPatientAcceptedCall) {
+                    var cCallLogUrl = '@Url.Action("PatientAcceptedCall", "UserChat")?doctorId=' + senderid;
+                    $.post(cCallLogUrl);
+                }
+                else {
+                    var cCallLogUrl = '@Url.Action("PatientDeclinedCall", "UserChat")?doctorId=' + senderid;
+                    $.post(cCallLogUrl);
+                }
+
+                if (isPatientAcceptedCall) {
+
+                    chat.server.patientAcceptedCall({
+                        SenderId: '@SessionHandler.UserInfo.Id',
+                        UserName: '@(SessionHandler.UserInfo.FirstName + " " + SessionHandler.UserInfo.LastName)',
+                        ReceiverConnectionId: senderConnId,
+                        AppId: appId
+                    });
+
+                    var cUrlReadyForCall = "@Url.Action("ReadyForCall","UserChat")?senderId=@SessionHandler.UserInfo.Id&userType=Patient&receiverId=" + senderid + "&doctorName=" + docName + "&patientName=@(SessionHandler.UserInfo.FirstName + " " + SessionHandler.UserInfo.LastName)&aptId=" + appId;
+
+                    $.post(cUrlReadyForCall, function (oResp) {
+                        if (oResp) {
+                            localStorage.setItem('consultationKey', oResp);
+
+                            chat.server.patientRedirectedToCall
+                                (senderConnId, oResp, '@SessionHandler.UserInfo.Id', '@(SessionHandler.UserInfo.FirstName + " " + SessionHandler.UserInfo.LastName)');
+
+                            //Redirect doctor to call
+                            window.location = '@Url.Action("Index","UserChat")';
+                        }
+                    });
+
+                }
+                else {
+                    chat.server.patientRejectedCall({
+                        SenderId: '@SessionHandler.UserInfo.Id',
+                        UserName: '@(SessionHandler.UserInfo.FirstName + " " + SessionHandler.UserInfo.LastName)',
+                        ReceiverConnectionId: senderConnId,
+                        AppId: appId
+                    });
+                }
+
+            };
+
+
 
             // Declare a function on the chat hub so the server can invoke it
             chat.client.showConnected = function (message) {
-                //$('#messages').empty();
-                $('#ddlAvailableDoctors').empty();
                 availableDoctors.doctor = [];
 
                 $.each(message, function (index, value) {
-
-                    // $('#messages').append('<li onclick=getReceiverConnectionId("' + value.ConnectionId + '");> Id: ' + value.Id + ', FirstName: ' + value.FirstName + ', LastName: ' + value.LastName + ', Logged On ' + value.Connected + ', Email: ' + value.UserName + ', ConnectionId:' + value.ConnectionId + '</li>');
-                    $('#ddlAvailableDoctors').append('<option value=' + value.ConnectionId + '>' + value.FirstName + ', ' + value.LastName + '---' + value.UserName + '</option>');
-                    //availableDoctors.doctor.push()
-
-                    availableDoctors.doctor.push({
-                        connectionId: value.ConnectionId,
-                        FirstName: value.FirstName,
-                        LastName: value.LastName,
-                        UserName: value.UserName,
-                        docId: value.Id
+                    $.each(message, function (index, value1) {
+                        availableDoctors.doctor.push({
+                            connectionId: value1.Value.ConnectionId,
+                            firstName: value1.Value.FirstName,
+                            lastName: value1.Value.LastName,
+                            userName: value1.Value.UserName,
+                            docId: value1.Value.Id
+                        });
                     });
-
                 });
 
                 checkAnyDoctorAvailableNow();
@@ -522,9 +575,19 @@
             $.connection.hub.logging = true;
             $.connection.hub.start().done(function () {
                 var id = $.cookie('Id');
+
+                chat.server.join(
+                    {
+                        Id: '@SessionHandler.UserInfo.Id',
+                        UserName: '@SessionHandler.UserInfo.Email',
+                        FirstName: '@SessionHandler.UserInfo.FirstName',
+                        LastName: '@SessionHandler.UserInfo.LastName',
+                        UserType: 'Patient'
+                    });
+
                 chat.server.adminJoin().done(function () {
                     //alert("New doctor has joined... Refresh list;");
-                    chat.server.getUsers();
+                    chat.server.getUsersDoctor();
                 });
 
                 $('#sendmessage').click(function () {
@@ -532,7 +595,7 @@
                     chat.server.sendMessageToDoctor(
                     {
                         SenderId: '@SessionHandler.UserInfo.Id',
-                        UserName: '@SessionHandler.UserInfo.Email',
+                        UserName: '@(SessionHandler.UserInfo.FirstName + " " + SessionHandler.UserInfo.LastName)',
                         ReceiverConnectionId: $('#ddlAvailableDoctors').val(),
                         ReceiverId: '20',
                         SenderType: 'Patient',
@@ -541,9 +604,6 @@
                     });
                     // Clear text box and reset focus for next comment.
                 });
-
-
-
             });
         });
     </script>
